* Add support for class, id, name, and tag selectors on non-html documents. [jddalton]

* Prepare byClass(), byId(), byName(), and byTag() to work with the `notHTML` private flag. [jddalton]

* Reduce the number of times String#toUpperCase is used in compilers and switch to `++i` in byName() and byId(). [Diego Perini, jddalton]

* Fix regression in `BUGGY_GEBTN` feature test. [jddalton]

* Fix `NATIVE_TRAVERSAL_API` fork of the structural pseudo-class section of compileSelector(). [jddalton]

* Fix typos in compileSelector() and getChildIndexesByTag() and clear `childIndexes` cache in match(). [jddalton]

* Remove variable `CSS_INDEX` because in IE the `sourceIndex` property can be 0 on disconnected nodes. [jddalton]

* Add cache back to getChildIndexesByTag(). [Diego Perini, jddalton]

* Rename private variable `SKIP_COMMENTS` to `SKIP_NON_ELEMENTS` and filer out comments, document, and invalid elements. [Diego Perini, jddalton, Thomas Aylott]

* Stop non-HTML documents throwing errors by changing checks like `if (from.getElementsByTagName)` to `if ('getElementsByTagName' in from)`. [jddalton]

* Rename private variable `NODE_NAME_TO_UPPER_CASE` to `TO_UPPER_CASE`. [jddalton]

* Ensure selectors like `* > :first-child` and `> :first-child` return the same results. [jddalton]

* Avoid extracting parenthesis around pseudos parameters and having to remove them later [Diego Perini]

* Ensure client_api() doesn't use an optimized selector for the compiled/dom cache. [jddalton]

* Ensure selectors like `.foo > *` and `.foo >` return the same results. [jddalton]

* Assume `context` on selectors like `> h3` which don't specify one. [jddalton]

* Avoid escaping characters that don't need it in regexps and simplify `reSplitGroup` and `reSplitToken`. [jddalton]

* Ensure the div test element is removed from the document. [jddalton]

* Make NWMatcher work when embedded in XHTML or XML documents. [jddalton]
