@@ -1,3 +1,7 @@
+* Add feature test to `RE_BUGGY_QSAPI` for Safari 3.2 failing to find mixed cased classNames. [jddalton, Thomas Aylott]
+
+* Ensure `BUGGY_GEBID` uses unique id values in its feature test. [jddalton]
+
 * Add support for class, id, name, and tag selectors on non-html documents. [jddalton]
 
 * Prepare byClass(), byId(), byName(), and byTag() to work with the `notHTML` private flag. [jddalton]
